Minor updates and fixes.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- Emerald Language Wesite
-Copyright 2016, Emerald Language -->
+<!-- Emerald Language Website
+Copyright 2016, Emerald -->
 <html><head><title>Emerald language</title>
     <link rel='stylesheet' href="css/emerald.css" />
     <link rel='stylesheet' href="css/syntax.css" />
@@ -8,7 +8,6 @@ Copyright 2016, Emerald Language -->
     <!-- NOTE: add metas rule. -->
     <meta name="viewport" content="width=device-width"></meta></head>
 <body>
-  <p id="test">Test this out.</p>
   <header>
     <h1>Emerald</h1>
     <p>A language agnostic templating engine</p>
@@ -54,7 +53,6 @@ Copyright 2016, Emerald Language -->
       <pre style="flex: 1"><code>&lt;html&gt;
   &lt;head&gt;
     &lt;title&gt;Emerald Example&lt;/title&gt;
-
     &lt;link rel=&quot;stylesheet&quot; href=&quot;css/main.css&quot; /&gt;
     &lt;link rel=&quot;stylesheet&quot; href=&quot;css/footer.css&quot; /&gt;
 
