Fix sass nesting

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!-- Emerald Language Website
 Copyright 2016, Emerald -->
 <html><head><title>Emerald language</title>
-    <link rel='stylesheet' href="css/emerald.css" />
-    <link rel='stylesheet' href="css/syntax.css" />
-    <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type='text/javascript' src="js/parser.js"></script>
+    <link rel="stylesheet" href="css/emerald.css"/>
+    <link rel="stylesheet" href="css/syntax.css"/>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/parser.js"></script>
     <!-- NOTE: add metas rule. -->
-    <meta name="viewport" content="width=device-width"></meta></head>
-<body>
-  <header>
-    <h1>Emerald</h1>
-    <p>A language agnostic templating engine</p>
-  </header>
-  <section class="split">
-    <section>
-      <h2><span class="code">sample.emr</span></h2>
-      <pre id="main-code"><code>html
+    <meta  name="viewport" content="width=device-width" /></head>
+  <body>
+    <header>
+      <h1>Emerald</h1>
+      <p>A language agnostic templating engine</p>
+    </header>
+    <section  class="split">
+      <section>
+        <h2><span  class="code">sample.emr</span></h2>
+        <pre  id="main-code"><code>html
   head
     title Emerald Example
 
@@ -39,18 +39,18 @@ Copyright 2016, Emerald -->
 
     footer
       p Copyright 2016, Emerald Language</code></pre>
-      <h2><span class="code">context.json</span></h2>
-      <pre><code>{
+        <h2 class="code"><span  class="code">context.json</span></h2>
+        <pre><code>{
   people: [
     {name: &quot;Andrew&quot;, info: &quot;Plays the sax.&quot;},
     {name: &quot;Dave&quot;, info: &quot;Draws cool stuff.&quot;}
     {name: &quot;Yu Chen Hou&quot;}
   ]
 }</code></pre>
-    </section>
-    <section>
-      <h2><span class="code">sample.html</span></h2>
-      <pre style="flex: 1"><code>&lt;html&gt;
+      </section>
+      <section>
+        <h2><span  class="code">sample.html</span></h2>
+        <pre  style="flex: 1"><code>&lt;html&gt;
   &lt;head&gt;
     &lt;title&gt;Emerald Example&lt;/title&gt;
     &lt;link rel=&quot;stylesheet&quot; href=&quot;css/main.css&quot; /&gt;
@@ -86,7 +86,7 @@ Copyright 2016, Emerald -->
     &lt;/footer&gt;
   &lt;/body&gt;
 &lt;/html&gt;</code></pre>
+      </section>
     </section>
-  </section>
-  <footer><a class="button" href="https://github.com/emerald-lang/emerald" target="_blank">View on GitHub</a></footer>
-</body></html>
+    <footer><a  class="button" href="https://github.com/emerald-lang/emerald" target="_blank">View on GitHub</a></footer>
+  </body></html>
